...
  <string name="plan_removed_message">Plan został usunięty</string>
  <string name="tasks">Zadania</string>
  <string name="break_time_tasks">Break time tasks</string>
  <string name="task_saved_message">Element został zapisany</string>
  <string name="task_removed_message">Element został usunięty</string>
  <string name="task_removal_confirmation_negative_button">Nie</string>
  <string name="task_removal_confirmation_positive_button">Tak, usuń element</string>
  <string name="task_removal_confirmation_title">Potwierdzenie usunięcia elementu planu</string>
  <string name="task_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten elemnt?</string>
  <string name="plan_removal_confirmation_negative_button">Nie</string>
  <string name="plan_removal_confirmation_positive_button">Tak, usuń plan</string>
  <string name="plan_removal_confirmation_title">Potwierdzenie usunięcia planu</string>
  <string name="plan_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten plan?</string>
...
  <string name="step_removal_confirmation_negative_button">Nie</string>
  <string name="step_removal_confirmation_positive_button">Tak, usuń składową zadania</string>
  <string name="step_removal_confirmation_title">Potwierdzenie usunięcia składowej zadania</string>
  <string name="step_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć składową zadania?</string>
  <string name="task_cannot_be_removed">Element nie może zostać usunięty</string>
  <string name="task_cannot_be_removed_message">Elemnt nie może zostać usunięty, ponieważ jest przypisany do planu: </string>
  <string name="task_cannot_be_removed_dialog_close_button">Zamknij</string>
  <string name="task_with_steps_saved_message">Zadanie szczególowe zapisane</string>
  <string name="step_removed_message">Składowa zadania została usunięta</string>
  <string name="step_saved_message">Składowa zadania została zapisana</string>
  <string name="steps_reordered_message">Kolejność elementów została zapisana</string>
  <string name="task_reordered_message">Kolejność elementów została zapisana</string>
  <string name ="search">Wyszukaj</string>
...
