<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- our search option -->
        <item
          android:id="@+id/menu_search"
          android:icon="@android:drawable/ic_menu_search"
          android:orderInCategory="100"
          android:title="Search"
          app:actionViewClass="android.widget.SearchView"
          app:showAsAction="always" />

    </menu>