...
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="15dp"
      android:orientation="vertical">

    <ImageButton
        android:id="@+id/id_remove_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_black_24dp" />
  </LinearLayout>

</LinearLayout>
